bro idk why its not deploying properly

--- a/assets/style.css
+++ b/assets/style.css
@@ -78,18 +78,41 @@ hr.separator {
     grid-template-columns: repeat(auto-fit,minmax(220px,1fr));
     gap: 12px;
 }
-.project{
+.project { 
     text-decoration: none;
     background: var(--glass);
-    padding: 12px; border-radius:10px;
-    color: var(--muted);
-}
+    padding: 12px;
+    border-radius:10px; 
+    color: var(--muted); }
 .project h4 { 
     margin: 0 0 6px 0;
     color:#fff; font-size:15px;
 }
 
-.project p { 
+.trackn p { 
+    margin: 0;
+    font-size: 13px;
+    color: var(--muted); 
+}
+
+.trackn {
+    display: flex;
+    flex-direction: column;
+    width: 125px; 
+    flex-shrink: 0; 
+    text-decoration: none;
+    background: var(--glass);
+    padding: 12px;
+    border-radius: 10px;
+    color: var(--muted);
+    align-items: center;
+}
+.trackn h4 { 
+    margin: 0 0 6px 0;
+    color:#fff; font-size:15px;
+}
+
+.trackn p { 
     margin: 0;
     font-size: 13px;
     color: var(--muted); 
@@ -178,12 +201,12 @@ body::-webkit-scrollbar, body::-webkit-scrollbar-button { display: none; } /* Ch
 .artistName {
     font-size: 14px;
     color: #dbdbdb4b;
-    margin-top: 2px;
+    margin-top: 12px;
 }
 
 .trackName {
     font-size: 14px !important;
     font-weight: bold;
     color: #ffffff !important;
-    margin-top: 4px;
+    margin-top: 4px !important;
 }
